# gest

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
examples/: demo.py  scroll.py  shift.py  two_handed_scroll_and_click.py
gest/: GES-130.onnx  GES-131.onnx  GES-147.onnx  capture_and_label.py  cv_gui.py  demo.py  inference.py  math.py  model.py  pipeline.py  threaded_pipeline.py
gest/annotation/: __init__.py  capture.py  cvat.py  cvat_labels.json  review.py
gest/annotation/gesture/: __init__.py  base.py  closed_pinch.py  open_pinch.py  single_landmark.py  static.py  video.py  y_selection.py
gest/examples/: one_handed_scroll.py  two_handed_scroll_and_click.py
gest/model/: __init__.py  dataset.py  training.py
