[tool.poetry]
name = "gest"
version = "0.1.0"
description = "Gesture recognition"
authors = ["Bartosz Marcinkowski <b.marcinkowski@leomail.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "*"
onnxruntime = "^1.4.0"
opencv-python = "^4.4.0"

pynput = { version = "*", optional = true }

[tool.poetry.extras]
examples = ["pynput"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
